-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Chris Horn <hornc@cray.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/f10303a6-f4c7-11e9-add9-52540065bddc
test_110k failed and hit an assertion:
[ 5669.278804] Lustre: DEBUG MARKER: == rpc test complete, duration -o sec ================================================================ 10:29:44 (1571740184) [ 5669.612623] Lustre: DEBUG MARKER: /usr/sbin/lctl mark onyx-35vm12.onyx.whamcloud.com: executing set_default_debug -1 all 4 [ 5669.809330] Lustre: DEBUG MARKER: onyx-35vm12.onyx.whamcloud.com: executing set_default_debug -1 all 4 [ 5704.525897] Lustre: 0:0:(gss_keyring.c:150:ctx_upcall_timeout_kr()) ctx ffff94b33fc03da0, key (null) [ 5704.527744] LustreError: 0:0:(gss_keyring.c:152:ctx_upcall_timeout_kr()) ASSERTION( key ) failed: [ 5704.529239] LustreError: 0:0:(gss_keyring.c:152:ctx_upcall_timeout_kr()) LBUG [ 5704.530425] Kernel panic - not syncing: LBUG in interrupt. [ 5704.531587] CPU: 0 PID: 0 Comm: swapper/0 Kdump: loaded Tainted: G OE ------------ 3.10.0-957.27.2.el7.x86_64 #1 [ 5704.533438] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011 [ 5704.534384] Call Trace: [ 5704.534832] [] dump_stack+0x19/0x1b [ 5704.535867] [] panic+0xe8/0x21f [ 5704.536703] [] ? ctx_unlist_kr+0xc0/0xc0 [ptlrpc_gss] [ 5704.537877] [] lbug_with_loc+0x8d/0xa0 [libcfs] [ 5704.538922] [] ? ctx_unlist_kr+0xc0/0xc0 [ptlrpc_gss] [ 5704.540029] [] ctx_upcall_timeout_kr+0xc3/0xd0 [ptlrpc_gss] [ 5704.541244] [] call_timer_fn+0x38/0x110 [ 5704.542162] [] ? ctx_unlist_kr+0xc0/0xc0 [ptlrpc_gss] [ 5704.543272] [] run_timer_softirq+0x24d/0x300 [ 5704.544254] [] __do_softirq+0xf5/0x280 [ 5704.545180] [] call_softirq+0x1c/0x30 [ 5704.546095] [] do_softirq+0x65/0xa0 [ 5704.546972] [] irq_exit+0x105/0x110 [ 5704.547823] [] smp_apic_timer_interrupt+0x48/0x60 [ 5704.548871] [] apic_timer_interrupt+0x162/0x170 [ 5704.549893] [] ? __cpuidle_text_start+0x8/0x8 [ 5704.551024] [] ? native_safe_halt+0xb/0x20 [ 5704.551976] [] default_idle+0x1e/0xc0 [ 5704.552881] [] arch_cpu_idle+0x20/0xc0 [ 5704.553807] [] cpu_startup_entry+0x14a/0x1e0 [ 5704.554795] [] rest_init+0x77/0x80 [ 5704.555665] [] start_kernel+0x44b/0x46c [ 5704.556587] [] ? repair_env_string+0x5c/0x5c [ 5704.557586] [] ? early_idt_handler_array+0x120/0x120 [ 5704.558683] [] x86_64_start_reservations+0x24/0x26 [ 5704.559753] [] x86_64_start_kernel+0x154/0x177 [ 5704.560776] [] start_cpu+0x5/0x14
- is related to
-
LU-13498 sanity test 56w fails with '/usr/bin/lfs_migrate -y -c 7 /mnt/lustre/d56w.sanity/file1 failed '
-
- Resolved
-